@@ -1,5 +1,11 @@
 2012-08-23  Mark Rowe  <mrowe@apple.com>
 
+        Roll out part of r126475 that breaks the build with older versions of Clang.
+
+        * wtf/FastMalloc.cpp:
+
+2012-08-23  Mark Rowe  <mrowe@apple.com>
+
         Make WTF build with the latest version of clang.
 
         Reviewed by Dan Bernstein.
